--- a/.env-example
+++ b/.env-example
@@ -2,3 +2,8 @@ SEED_PHRASES='[
 {"name": "nameAccount1", "phrase": "phraseAccount1"},
 {"name": "nameAccount2", "phrase": "phraseAccount2"}
 ]'
+
+AUTH_TOKENS='[
+  {"name": "yourName", "token": "yourAuthToken"},
+  {"name": "yourName", "token": "yourAuthToken"},
+]'
